--- a/frame1.html
+++ b/frame1.html
@@ -6,69 +6,55 @@
     <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
-
-    <body>
+  <body>
     <div class="frame--center">
       <div class="frame bg-gray">
         <div class="frame__border">
           <section class="header">
-            <div class="header__title">
-              <div class="two-box">
-                <div style="display: flex; justify-content: space-between">
-                  <div class="box"></div>
-                  <div class="box"></div>
-                </div>
-              </div>
-              <div class="two-box">
-                <div style="display: flex; justify-content: space-between">
-                  <div class="box"></div>
-                  <div class="box"></div>
-                </div>
-              </div>
-              <h2>Chỉ số đường đời</h2>
+            <div class="header__title" style="position: relative;text-align: center;">
+              <object data="/img/title.svg" type=""></object>
+              <h2>Chỉ số đườs</h2>
             </div>
-            <div class="header__content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam non consequuntur cumque dolorem sed! Quod pariatur veniam ex sequi eligendi tenetur voluptas. Adipisci accusamus ad dolor doloribus officia quia at.</p></div>
-          </section>
-          <section class="content">
-            <div class="row">
-              <div class="col"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At dolorem non voluptatibus magnam similique ullam quibusdam minus natus ipsa fuga asperiores, tempora, ex cum voluptas recusandae earum atque! Quisquam, perspiciatis.</p></div>
-              <div class="col">
-                <img class="content__img" src="./img/Screenshot 2021-01-19 153934.png" alt="">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At dolorem non voluptatibus magnam similique ullam quibusdam minus natus ipsa fuga asperiores, tempora, ex cum voluptas recusandae earum atque! Quisquam, perspiciatis.</p></div>
-              <div class="col">
-                <img class="content__img" src="./img/Screenshot 2021-01-19 153934.png" alt="">
-              </div>
+            <div class="header__content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam non
+                consequuntur cumque dolorem sed! Quod pariatur veniam ex sequi
+                eligendi tenetur voluptas. Adipisci accusamus ad dolor doloribus
+                officia quia at.
+              </p>
             </div>
           </section>
-          <div class="line-box">
+          <section class="content page6">
+           
+          </section>
+          <!-- <div class="line-box">
             <div class="two-box">
-              <div style="display: flex; justify-content: space-between">
+              <div>
                 <div class="box"></div>
                 <div class="box"></div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
-        <div style="display: flex;">
+        <div style="text-align:center;">
+          <svg width="40px" height="20px">
+            <polyline points="0 0,20 20,40 0"></polyline>
+          </svg>
+        </div>
+        <!-- <div style="float: left; width: 100%">
           <div class="line-box">
             <div class="two-box">
-              <div style="display: flex; justify-content: space-between">
-                <div class="box"></div>
-                <div class="box"></div>
-              </div>
+              <div class="box"></div>
+              <div class="box"></div>
             </div>
           </div>
           <div class="line-box">
             <div class="two-box">
-              <div style="display: flex; justify-content: space-between">
-                <div class="box"></div>
-                <div class="box"></div>
-              </div>
+              <div class="box"></div>
+              <div class="box"></div>
             </div>
-          </div></div>
+          </div>
+        </div> -->
       </div>
     </div>
   </body>
