--- a/p25.html
+++ b/p25.html
@@ -48,15 +48,15 @@
           <section class="content option3">
             <div class="bg-option3">
               <div class="row">
-                <div class="content__cmt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum doloribus temporibus unde dolor vero, sint nobis voluptate porro tempore sapiente! Est cum, illo quidem repellendus unde ipsam facere doloremque tenetur.Enim facilis maxime, id earum expedita, quo nihil et molestiae totam, quod alias ea corporis? Cum, reprehenderit maiores exercitationem, placeat nihil nulla nam sint omnis fuga incidunt harum earum repellat.</div>
+                <p class="content__cmt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum doloribus temporibus unde dolor vero, sint nobis voluptate porro tempore sapiente! Est cum, illo quidem repellendus unde ipsam facere doloremque tenetur.Enim facilis maxime, id earum expedita, quo nihil et molestiae totam, quod alias ea corporis? Cum, reprehenderit maiores exercitationem, placeat nihil nulla nam sint omnis fuga incidunt harum earum repellat.</p>
                 <div style="position: relative;transform: rotate(45deg);right: -130px;"><div class="avatar__cmt"></div></div>
               </div>
               <div class="row" >
-                <div class="content__cmt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum doloribus temporibus unde dolor vero, sint nobis voluptate porro tempore sapiente! Est cum, illo quidem repellendus unde ipsam facere doloremque tenetur.Enim facilis maxime, id earum expedita, quo nihil et molestiae totam, quod alias ea corporis? Cum, reprehenderit maiores exercitationem, placeat nihil nulla nam sint omnis fuga incidunt harum earum repellat.</div>
+                <p class="content__cmt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum doloribus temporibus unde dolor vero, sint nobis voluptate porro tempore sapiente! Est cum, illo quidem repellendus unde ipsam facere doloremque tenetur.Enim facilis maxime, id earum expedita, quo nihil et molestiae totam, quod alias ea corporis? Cum, reprehenderit maiores exercitationem, placeat nihil nulla nam sint omnis fuga incidunt harum earum repellat.</p>
                 <div style="position: relative;transform: rotate(45deg);right: 130px;"><div class="avatar__cmt"></div></div>
               </div>
               <div class="row">
-                <div class="content__cmt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum doloribus temporibus unde dolor vero, sint nobis voluptate porro tempore srit maiores exercitationem, placeat nihil nulla nam sint omnis fuga incidunt harum earum repellat.</div>
+                <p class="content__cmt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum doloribus temporibus unde dolor vero, sint nobis voluptate porro tempore srit maiores exercitationem, placeat nihil nulla nam sint omnis fuga incidunt harum earum repellat.</p>
                 <div style="position: relative;transform: rotate(45deg);right: -130px;"><div class="avatar__cmt"></div></div>
               </div>
             </div>
@@ -79,7 +79,7 @@
             </div>
           </div>
         </div>
-        <div></div>
+         
       </div>
     </div>
   </body>
